# openstack-ansible-os_magnum

./: .gitreview  CONTRIBUTING.rst  README.rst  setup.cfg  tox.ini
defaults/: main.yml
doc/source/: conf.py  index.rst  magnum-capi.rst  mcapi-vexxhost.rst  post-deployment.rst
doc/source/assets/: azimuth-magnum-config.yml  k8s-config.yml  k8s.yml  magnum-config.yml  vexxhost-magnum-config.yml
examples/: playbook.yml
handlers/: main.yml
meta/: main.yml
releasenotes/source/: conf.py
tasks/: install.yml  magnum_capi_azimuth.yml  magnum_capi_install.yml  magnum_capi_vexxhost.yml  magnum_capi_vexxhost_proxy.yml  magnum_capi_vexxhost_rust.yml  magnum_db_setup.yml  magnum_db_sync.yml  magnum_init.yml  magnum_init_systemd.yml  magnum_install.yml  magnum_install_apt.yml  magnum_post_install.yml  magnum_pre_install.yml  magnum_resources.yml  magnum_service_setup.yml  magnum_uwsgi.yml  main.yml
templates/: capi_sudoers.j2  magnum-systemd-init.j2  magnum-systemd-tempfiles.j2  magnum-uwsgi.ini.j2  magnum.conf.j2  upstart-init.j2
tests/: ansible-role-requirements.yml  functional_test.yml  inventory  magnum-test-vars.yml  os_magnum-overrides.yml  test-install-haproxy.yml  test-install-magnum.yml
tests/host_vars/: localhost.yml  openstack1.yml
vars/: capi_azimuth.yml  capi_vexxhost.yml  debian.yml  main.yml  redhat.yml  suse.yml  ubuntu.yml
zuul.d/: jobs.yaml  nodesets.yaml  project.yaml
zuul.d/playbooks/: bootstrap-mcapi-k8s.yml  bootstrap-mcapi-vexxhost.yml
